--- a/app/src/main/res/layout/fragment_measurement_add.xml
+++ b/app/src/main/res/layout/fragment_measurement_add.xml
@@ -5,6 +5,8 @@
 
   <data>
 
+    <import type="hochschule.de.bachelorthesis.utility.Converter"/>
+
     <variable
       name="vm"
       type="hochschule.de.bachelorthesis.viewmodels.FoodViewModel"/>
@@ -51,7 +53,8 @@
           android:layout_weight="1"
           android:paddingStart="32dp"
           android:paddingEnd="32dp"
-          android:gravity="center"/>
+          android:gravity="center"
+          android:text="@{Converter.convertTimeStampToDate(vm.measurementAddModel.timestamp)}"/>
       </LinearLayout>
 
       <LinearLayout
@@ -77,7 +80,8 @@
           android:layout_weight="1"
           android:paddingStart="32dp"
           android:paddingEnd="32dp"
-          android:gravity="center"/>
+          android:gravity="center"
+          android:text="@{Converter.convertTimeStampToTimeStart(vm.measurementAddModel.timestamp)}"/>
       </LinearLayout>
 
       <!-- Advance information-->
@@ -95,7 +99,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_marginStart="32dp"
-        android:checked="@{safeUnbox(vm.measurementAddModelModel.gi)}"
+        android:checked="@{safeUnbox(vm.measurementAddModel.gi)}"
         android:text="@string/gi_measurement"/>
 
       <com.google.android.material.textfield.TextInputLayout
@@ -111,7 +115,8 @@
           android:id="@+id/amount"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:inputType="number"/>
+          android:inputType="number"
+          android:text="@{Converter.convertInteger(vm.measurementAddModel.amount)}"/>
       </com.google.android.material.textfield.TextInputLayout>
 
       <com.google.android.material.textfield.TextInputLayout
@@ -153,7 +158,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_marginStart="32dp"
-        android:checked="@{safeUnbox(vm.measurementAddModelModel.physicallyActivity)}"
+        android:checked="@{safeUnbox(vm.measurementAddModel.physicallyActivity)}"
         android:text="@string/physically_active_more_than_usual"/>
 
       <com.google.android.material.checkbox.MaterialCheckBox
@@ -162,14 +167,14 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_marginStart="32dp"
-        android:checked="@{safeUnbox(vm.measurementAddModelModel.alcoholConsumed)}"
+        android:checked="@{safeUnbox(vm.measurementAddModel.alcoholConsumed)}"
         android:text="@string/alcohol_consumed"/>
 
       <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="Events"
+        android:text="@string/events"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
         android:textColor="@color/colorPrimary"/>
 
@@ -180,11 +185,11 @@
 
         <com.google.android.material.checkbox.MaterialCheckBox
           android:id="@+id/ill"
-          android:layout_width="wrap_content"
+          android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:layout_marginStart="32dp"
-          android:checked="@{safeUnbox(vm.measurementAddModelModel.ill)}"
+          android:checked="@{safeUnbox(vm.measurementAddModel.ill)}"
           android:text="@string/ill_while_measuring"/>
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -192,7 +197,7 @@
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_marginEnd="32dp"
-          android:checked="@{safeUnbox(vm.measurementAddModelModel.medication)}"
+          android:checked="@{safeUnbox(vm.measurementAddModel.medication)}"
           android:text="@string/taking_medication"/>
       </LinearLayout>
 
@@ -201,7 +206,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginStart="32dp"
-        android:checked="@{safeUnbox(vm.measurementAddModelModel.period)}"
+        android:checked="@{safeUnbox(vm.measurementAddModel.period)}"
         android:text="@string/period"/>
 
       <!-- Measurement values-->
@@ -226,7 +231,8 @@
           android:id="@+id/mv0"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:inputType="number"/>
+          android:inputType="number"
+          android:text="@{Converter.convertInteger(vm.measurementAddModel.value0)}"/>
       </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
   </ScrollView>
