--- a/app/src/main/res/layout/fragment_measurement_edit.xml
+++ b/app/src/main/res/layout/fragment_measurement_edit.xml
@@ -158,7 +158,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_marginStart="32dp"
-        android:checked="@{safeUnbox(vm.measurementAddModelModel.physicallyActivity)}"
+        android:checked="@{safeUnbox(vm.measurementModel.physicallyActivity)}"
         android:text="@string/physically_active_more_than_usual"/>
 
       <com.google.android.material.checkbox.MaterialCheckBox
@@ -167,14 +167,14 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_marginStart="32dp"
-        android:checked="@{safeUnbox(vm.measurementAddModelModel.alcoholConsumed)}"
+        android:checked="@{safeUnbox(vm.measurementModel.alcoholConsumed)}"
         android:text="@string/alcohol_consumed"/>
 
       <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="Events"
+        android:text="@string/events"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
         android:textColor="@color/colorPrimary"/>
 
@@ -185,11 +185,11 @@
 
         <com.google.android.material.checkbox.MaterialCheckBox
           android:id="@+id/ill"
-          android:layout_width="wrap_content"
+          android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:layout_marginStart="32dp"
-          android:checked="@{safeUnbox(vm.measurementAddModelModel.ill)}"
+          android:checked="@{safeUnbox(vm.measurementModel.ill)}"
           android:text="@string/ill_while_measuring"/>
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -197,7 +197,7 @@
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_marginEnd="32dp"
-          android:checked="@{safeUnbox(vm.measurementAddModelModel.medication)}"
+          android:checked="@{safeUnbox(vm.measurementModel.medication)}"
           android:text="@string/taking_medication"/>
       </LinearLayout>
 
@@ -206,7 +206,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginStart="32dp"
-        android:checked="@{safeUnbox(vm.measurementAddModelModel.period)}"
+        android:checked="@{safeUnbox(vm.measurementModel.period)}"
         android:text="@string/period"/>
 
       <!-- Measurement values-->
