--- a/app/src/main/res/menu/add_measurement_menu.xml
+++ b/app/src/main/res/menu/add_measurement_menu.xml
@@ -3,6 +3,11 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
+    android:id="@+id/clear"
+    android:icon="@drawable/ic_clear_all_white_24dp"
+    android:title="@string/clear"
+    app:showAsAction="ifRoom"/>
+  <item
     android:id="@+id/save"
     android:icon="@drawable/ic_save_white_24dp"
     android:title="@string/save"
