--- a/app/src/main/res/layout/fragment_measurement_edit.xml
+++ b/app/src/main/res/layout/fragment_measurement_edit.xml
@@ -162,7 +162,7 @@
         android:text="@string/physically_active_more_than_usual"/>
 
       <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/smoking"
+        android:id="@+id/alcoholConsumed"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
