Changed chart type from Horizontal BarChart to BarChart

--- a/app/src/main/res/layout/fragment_graphs_single_food.xml
+++ b/app/src/main/res/layout/fragment_graphs_single_food.xml
@@ -104,13 +104,13 @@
         android:layout_margin="32dp">
       </com.github.mikephil.charting.charts.LineChart>
 
-      <com.github.mikephil.charting.charts.HorizontalBarChart
+      <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barChart"
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:layout_margin="32dp"
         android:visibility="gone">
-      </com.github.mikephil.charting.charts.HorizontalBarChart>
+      </com.github.mikephil.charting.charts.BarChart>
 
     </LinearLayout>
   </ScrollView>
