--- a/app/src/main/res/layout/fragment_graphs_single_food.xml
+++ b/app/src/main/res/layout/fragment_graphs_single_food.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
         android:columnCount="2"
         android:orientation="horizontal">
 
@@ -100,15 +101,17 @@
       <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lineChart"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_margin="32dp">
+        android:layout_height="250dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp">
       </com.github.mikephil.charting.charts.LineChart>
 
       <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barChart"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_margin="32dp"
+        android:layout_height="280dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
         android:visibility="gone">
       </com.github.mikephil.charting.charts.BarChart>
 
