--- a/app/src/main/res/layout/fragment_food_overview.xml
+++ b/app/src/main/res/layout/fragment_food_overview.xml
@@ -166,7 +166,6 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="end"
-          android:text="@{Converter.convertInteger(safeUnbox(vm.foodInfoOverviewModel.maxGlucose))}"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
       </LinearLayout>
 
@@ -188,7 +187,48 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="end"
-          android:text="@{Converter.convertInteger(safeUnbox(vm.foodInfoOverviewModel.averageGlucose))}"
+          android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+      </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp">
+
+        <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:text="@string/integral"
+          android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+
+        <TextView
+          android:id="@+id/integral"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:gravity="end"
+          android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+      </LinearLayout>
+
+      <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp">
+
+        <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:text="@string/standard_deviation"
+          android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
+
+        <TextView
+          android:id="@+id/stdev"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:gravity="end"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
       </LinearLayout>
 
@@ -220,7 +260,6 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="end"
-          android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value0))}"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
       </LinearLayout>
 
@@ -242,9 +281,9 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="end"
-          android:text="@{Converter.convertInteger(safeUnbox(vm.foodInfoOverviewModel.personalIndex))}"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
       </LinearLayout>
+
     </LinearLayout>
   </ScrollView>
 </layout>
